delete android app stuff, add knip, add generate-password, remove deps

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MPL-2.0",
   "private": true,
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf -G dist",
     "build": "npm run clean && webpack",
     "lint": "npm-run-all lint:*",
     "lint:css": "stylelint app/*.css app/**/*.css",
@@ -32,7 +32,8 @@
     "circleci-test-integration": "echo 'webdriverio tests need to be updated to node 12'",
     "start": "npm run clean && cross-env NODE_ENV=development L10N_DEV=true BASE_URL=http://localhost:8080 DETECT_BASE_URL=true webpack serve --mode=development",
     "android": "cross-env ANDROID=1 npm start",
-    "prod": "node server/bin/prod.js"
+    "prod": "node server/bin/prod.js",
+    "knip": "knip"
   },
   "husky": {
     "hooks": {
@@ -70,6 +71,7 @@
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@mattiasbuelens/web-streams-polyfill": "0.2.1",
     "@sentry/browser": "^7.120.4",
+    "@types/node": "^25.3.0",
     "asmcrypto.js": "^0.22.0",
     "babel-loader": "^8.2.4",
     "babel-plugin-istanbul": "^5.2.0",
@@ -83,19 +85,16 @@
     "cssnano": "^5.1.12",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.2",
-    "eslint-plugin-mocha": "^6.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "expose-loader": "^0.7.5",
-    "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fast-text-encoding": "^1.0.3",
     "file-loader": "^6.2.0",
     "git-rev-sync": "^3.0.2",
-    "html-loader": "^0.5.5",
     "http_ece": "^1.1.0",
     "husky": "^3.0.9",
     "intl-pluralrules": "^1.3.1",
+    "knip": "^5.84.1",
     "lint-staged": "^9.4.2",
     "mocha": "^10.1.0",
     "morgan": "^1.9.1",
@@ -112,7 +111,6 @@
     "puppeteer": "^2.0.0",
     "raw-loader": "^3.1.0",
     "rimraf": "^3.0.0",
-    "script-loader": "^0.7.2",
     "sinon": "^7.5.0",
     "string-hash": "^1.1.3",
     "stylelint": "^14.9.1",
@@ -121,6 +119,7 @@
     "svgo": "^2.8.0",
     "svgo-loader": "^3.0.1",
     "tailwindcss": "^2",
+    "typescript": "^5.9.3",
     "val-loader": "^2.1.2",
     "webpack": "^4.47.0",
     "webpack-cli": "^4.10.0",
@@ -133,7 +132,6 @@
     "@dannycoates/express-ws": "^5.0.3",
     "@fluent/bundle": "^0.17.1",
     "@fluent/langneg": "^0.6.2",
-    "@google-cloud/storage": "^6.2.3",
     "@sentry/node": "^7.7.0",
     "aws-sdk": "^2.1109.0",
     "body-parser": "^1.20.0",
@@ -142,8 +140,8 @@
     "configstore": "github:dannycoates/configstore#master",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
-    "double-ended-queue": "^2.1.0-0",
     "express": "^4.17.3",
+    "generate-password": "^1.7.1",
     "helmet": "^3.23.3",
     "mozlog": "^3.0.1",
     "node-fetch": "^2.6.7",
